--- a/package.json
+++ b/package.json
@@ -2,154 +2,50 @@
   "name": "rest-express",
   "version": "1.0.0",
   "type": "module",
-  "license": "MIT",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development tsx -r dotenv/config server/index.ts",
-    "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
-    "start": "NODE_ENV=production node dist/index.js",
-    "check": "tsc",
-    "# Development commands": "",
-    "dev:client": "vite",
-    "dev:client:debug": "cross-env VITE_DEBUG=true vite --config vite.debug.config.ts",
-    "dev:full": "concurrently \"npm run dev\" \"npm run dev:client\"",
-    "start:full": "concurrently \"npm run start\" \"npm run start:client\"",
-    "start:client": "vite preview",
-  "# Setup and installation commands": "",
-    "install-deps": "npm install && cd client && npm install",
-    "setup": "npm run install-deps && npm run init:database",    
-    "setup:full": "npm run install-deps && npm run init:database && npm run check:auth",
-    "setup:demo": "npm run install-deps && npm run init:database && npm run populate:fake-data",
-    "quickstart": "cross-env NODE_ENV=development tsx -r dotenv/config scripts/dev-setup.ts",
-    "populate:fake-data": "cross-env NODE_ENV=development tsx -r dotenv/config scripts/populate-fake-data.ts",
-    "populate:uuid": "npm install uuid && cross-env NODE_ENV=development tsx -r dotenv/config scripts/populate-fake-data.ts",
-    "# Database commands": "",
-    "db:push": "drizzle-kit push",
-    "db:check": "drizzle-kit check:pg",
-    "db:sync": "echo \"Syncing local schema with Supabase database...\" && npm run db:push",
-    "init:database": "cross-env NODE_ENV=development tsx -r dotenv/config scripts/init-database.ts",
-    "# Supabase Auth commands": "",
-    "fix:auth": "echo \"Please run the SQL fix script in your Supabase SQL Editor: scripts/fix-auth-issues.sql\"",
-    "fix:auth:wizard": "cross-env NODE_ENV=development tsx -r dotenv/config scripts/fix-supabase-auth.ts",
-    "fix:signup": "cross-env NODE_ENV=development tsx -r dotenv/config scripts/fix-signup-error.ts",    "fix:login": "cross-env NODE_ENV=development tsx -r dotenv/config scripts/fix-login-file.ts",
-    "fix:supabase": "cross-env NODE_ENV=development tsx -r dotenv/config scripts/fix-supabase-auth.ts",
-    "fix:routing": "cross-env NODE_ENV=development tsx -r dotenv/config scripts/fix-routing.ts",
-    "setup:oauth": "echo \"Visit your Supabase Project > Authentication > Providers > Google and set the callback URL to: ${APP_URL}/auth/callback\"",
-    "setup:google-oauth": "cross-env NODE_ENV=development tsx -r dotenv/config scripts/setup-google-oauth.ts",
-    "test:signup": "cross-env NODE_ENV=development tsx -r dotenv/config scripts/test-signup.ts",
-    "# Migration commands": "",
-    "migrate:drop-users": "cross-env NODE_ENV=development tsx -r dotenv/config scripts/drop-users-table.ts",
-    "migrate-users": "cross-env NODE_ENV=development tsx -r dotenv/config scripts/migrate-users-to-auth.ts",
-    "apply-rls": "cross-env NODE_ENV=development tsx -r dotenv/config scripts/apply-rls-policies.ts",
-    "drop-users-table": "cross-env NODE_ENV=development tsx -r dotenv/config scripts/drop-users-table.ts",
-    "migrate:auth-only": "npm run migrate-users && npm run apply-rls && npm run drop-users-table && echo \"Migration to Supabase Auth-only user management completed\"",
-    "migrate:schema": "echo \"Aligning schema.ts with Supabase database structure\" && npm run db:check && npm run db:sync",
-    "# Troubleshooting commands": "",
-    "check:auth": "cross-env NODE_ENV=development tsx -r dotenv/config scripts/check-auth-setup.ts",
-    "check:db": "drizzle-kit check:pg",
-    "check:schema": "cross-env NODE_ENV=development tsx -r dotenv/config scripts/check-schema-alignment.ts",
-    "troubleshoot": "echo \"Running diagnostic checks...\" && npm run check:auth && npm run check:db && echo \"For detailed troubleshooting steps, see README.md\"",
-    "troubleshoot:dev": "echo \"Running development checks...\" && npm run check && echo \"Checking for syntax errors in Login.tsx (use npm run fix:login to fix)\"",
-    "troubleshoot:auth": "echo \"Running Supabase Auth diagnostics...\" && npm run fix:supabase",
-    "troubleshoot:schema": "cross-env NODE_ENV=development tsx -r dotenv/config scripts/check-schema-alignment.ts"
+    "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
+    "dev:server": "cross-env NODE_ENV=development tsx -r dotenv/config server/index.ts",
+    "dev:client": "cd client && npm run dev",
+    "dev:full": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
+    "build": "npm run build:client && npm run build:server",
+    "build:client": "cd client && npm run build",
+    "build:server": "tsc",
+    "start": "node dist/server/index.js",
+    "test": "vitest",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "cd client && npm run preview"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.10.0",
-    "@jridgewell/trace-mapping": "^0.3.25",
-    "@neondatabase/serverless": "^0.10.4",
-    "@radix-ui/react-accordion": "^1.2.4",
-    "@radix-ui/react-alert-dialog": "^1.1.7",
-    "@radix-ui/react-aspect-ratio": "^1.1.3",
-    "@radix-ui/react-avatar": "^1.1.4",
-    "@radix-ui/react-checkbox": "^1.1.5",
-    "@radix-ui/react-collapsible": "^1.1.4",
-    "@radix-ui/react-context-menu": "^2.2.7",
-    "@radix-ui/react-dialog": "^1.1.7",
-    "@radix-ui/react-dropdown-menu": "^2.1.7",
-    "@radix-ui/react-hover-card": "^1.1.7",
-    "@radix-ui/react-label": "^2.1.3",
-    "@radix-ui/react-menubar": "^1.1.7",
-    "@radix-ui/react-navigation-menu": "^1.2.6",
-    "@radix-ui/react-popover": "^1.1.7",
-    "@radix-ui/react-progress": "^1.1.3",
-    "@radix-ui/react-radio-group": "^1.2.4",
-    "@radix-ui/react-scroll-area": "^1.2.4",
-    "@radix-ui/react-select": "^2.1.7",
-    "@radix-ui/react-separator": "^1.1.3",
-    "@radix-ui/react-slider": "^1.2.4",
-    "@radix-ui/react-slot": "^1.2.0",
-    "@radix-ui/react-switch": "^1.1.4",
-    "@radix-ui/react-tabs": "^1.1.4",
-    "@radix-ui/react-toast": "^1.2.7",
-    "@radix-ui/react-toggle": "^1.1.3",
-    "@radix-ui/react-toggle-group": "^1.1.3",
-    "@radix-ui/react-tooltip": "^1.2.0",
-    "@supabase/supabase-js": "^2.50.0",
-    "@tanstack/react-query": "^5.60.5",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "cmdk": "^1.1.1",
-    "connect-pg-simple": "^10.0.0",
-    "date-fns": "^3.6.0",
-    "drizzle-orm": "^0.39.1",
-    "drizzle-zod": "^0.7.0",
-    "embla-carousel-react": "^8.6.0",
-    "express": "^4.21.2",
-    "express-session": "^1.18.1",
-    "framer-motion": "^11.13.1",
-    "input-otp": "^1.4.2",
-    "lucide-react": "^0.453.0",
-    "memorystore": "^1.6.7",
-    "next-themes": "^0.4.6",
-    "passport": "^0.7.0",
-    "passport-local": "^1.0.0",
-    "react": "^18.3.1",
-    "react-day-picker": "^8.10.1",
-    "react-dom": "^18.3.1",
-    "react-hook-form": "^7.55.0",
-    "react-icons": "^5.4.0",
-    "react-resizable-panels": "^2.1.7",
-    "recharts": "^2.15.2",
-    "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7",
-    "tw-animate-css": "^1.2.5",
-    "vaul": "^1.1.2",
-    "wouter": "^3.3.5",
-    "ws": "^8.18.0",
-    "zod": "^3.24.2",
-    "zod-validation-error": "^3.4.0"
+    "@supabase/supabase-js": "^2.39.3",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "drizzle-orm": "^0.29.3",
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
+    "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
+    "pg": "^8.11.3",
+    "postgres": "^3.4.3",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@replit/vite-plugin-cartographer": "^0.2.7",
-    "@replit/vite-plugin-runtime-error-modal": "^0.0.3",
-    "@tailwindcss/typography": "^0.5.15",
-    "@tailwindcss/vite": "^4.1.3",
-    "@types/connect-pg-simple": "^7.0.3",
-    "@types/express": "4.17.21",
-    "@types/express-session": "^1.18.0",
-    "@types/node": "20.16.11",
-    "@types/passport": "^1.0.16",
-    "@types/passport-local": "^1.0.38",
-    "@types/react": "^18.3.11",
-    "@types/react-dom": "^18.3.1",
-    "@types/ws": "^8.5.13",
-    "@vitejs/plugin-react": "^4.3.2",
-    "autoprefixer": "^10.4.20",
-    "babel-plugin-transform-vite-meta-env": "^1.0.3",
-    "chalk": "^5.4.1",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/multer": "^1.4.11",
+    "@types/node": "^20.10.5",
+    "@types/pg": "^8.10.9",
+    "@typescript-eslint/eslint-plugin": "^6.14.0",
+    "@typescript-eslint/parser": "^6.14.0",
     "concurrently": "^8.2.2",
     "cross-env": "^7.0.3",
-    "dotenv": "^16.1.4",
-    "drizzle-kit": "^0.30.4",
-    "esbuild": "^0.25.0",
-    "postcss": "^8.4.47",
-    "postgres": "^3.4.4",
-    "tailwindcss": "^3.4.17",
-    "tsx": "^4.19.1",
-    "typescript": "5.6.3",
-    "vite": "^5.4.14",
-    "vite-tsconfig-paths": "^4.2.3"
-  },
-  "optionalDependencies": {
-    "bufferutil": "^4.0.8"
+    "drizzle-kit": "^0.20.7",
+    "eslint": "^8.55.0",
+    "tsx": "^4.6.2",
+    "typescript": "^5.2.2",
+    "vitest": "^1.0.4"
   }
 }
