--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "start": "node dist/server/index.js",
     "test": "vitest",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "cd client && npm run preview"
+    "preview": "cd client && npm run preview",
+    "install-deps": "npm install --legacy-peer-deps"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.3",
