--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.39.3",
     "bcryptjs": "^2.4.3",
+    "concurrently": "^8.2.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "drizzle-orm": "^0.39.3",
+    "drizzle-orm": "^0.39.1",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "helmet": "^7.1.0",
@@ -41,9 +42,9 @@
     "@types/pg": "^8.10.9",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
-    "concurrently": "^8.2.2",
     "cross-env": "^7.0.3",
     "drizzle-kit": "^0.20.7",
+    "drizzle-zod": "^0.7.0",
     "eslint": "^8.55.0",
     "tsx": "^4.6.2",
     "typescript": "^5.2.2",
