--- a/package.json
+++ b/package.json
@@ -1,35 +1,31 @@
 {
-  "name": "rest-express",
-  "version": "1.0.0",
+  "name": "referral-platform",
+  "private": true,
+  "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "build": "npm run build --workspace=client",
     "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
-    "dev:server": "cross-env NODE_ENV=development tsx -r dotenv/config server/index.ts",
-    "dev:client": "cd client && npm run dev",
-    "dev:full": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
-    "build": "npm run build:client && npm run build:server",
-    "build:client": "cd client && npm run build",
-    "build:server": "tsc",
-    "start": "node dist/server/index.js",
-    "test": "vitest",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "cd client && npm run preview",
-    "setup": "npm install && cd client && npm install"
+    "dev:server": "tsx watch server/index.ts",
+    "dev:client": "npm run dev --workspace=client",
+    "install-deps": "npm install && npm install --workspace=client",
+    "setup": "npm install && npm install --workspace=client",
+    "postinstall": "npm install --workspace=client"
   },
+  "workspaces": [
+    "client"
+  ],
   "dependencies": {
     "@supabase/supabase-js": "^2.39.3",
     "bcryptjs": "^2.4.3",
     "concurrently": "^8.2.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "drizzle-orm": "^0.39.1",
+    "drizzle-orm": "^0.29.3",
     "express": "^4.18.2",
-    "express-rate-limit": "^7.1.5",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
-    "multer": "^1.4.5-lts.1",
+    "morgan": "^1.10.0",
     "postgres": "^3.4.3",
-    "ws": "^8.14.2",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -37,18 +33,10 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
-    "@types/multer": "^1.4.11",
-    "@types/node": "^20.10.5",
-    "@typescript-eslint/eslint-plugin": "^6.14.0",
-    "@typescript-eslint/parser": "^6.14.0",
-    "@vitejs/plugin-react": "^4.2.1",
-    "cross-env": "^7.0.3",
+    "@types/morgan": "^1.9.9",
+    "@types/node": "^20.10.6",
     "drizzle-kit": "^0.20.7",
-    "drizzle-zod": "^0.7.0",
-    "eslint": "^8.55.0",
-    "tailwindcss": "^3.4.0",
-    "tsx": "^4.6.2",
-    "typescript": "^5.2.2",
-    "vitest": "^1.0.4"
+    "tsx": "^4.7.0",
+    "typescript": "^5.3.3"
   }
 }
