--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 # Supabase Configuration
 # Get these from Supabase Dashboard > Settings > API
 VITE_SUPABASE_URL=https://your-project.supabase.co
+SUPABASE_URL=your-supabase-url
 VITE_SUPABASE_ANON_KEY=your-anon-key
 SUPABASE_SERVICE_KEY=your-service-key
 
